Project 3/hw3.txt
Cindi Dong
Lab 2

See lab3.txt for questions 1 and 2.

Question 3. Error Message:
Traceback (most recent call last):
  File "randline.py", line 70, in <module>
    main()
  File "randline.py", line 64, in main
    sys.stdout.write(generator.chooseline())
  File "randline.py", line 34, in chooseline
    return random.choice(self.lines)
  File "/usr/lib64/python2.7/random.py", line 274, in choice
    return seq[int(self.random() * len(seq))]  
    # raises IndexError if seq is empty
IndexError: list index out of range

This error occurred because the program will attempt to print 
random lines from an empty file that has nothing in it.
Therefore, the chooseLine function will try to access the 
length of a null item.

Question 4. Error Message:
File "randline.py", line 65
    except IOError as (errno, strerror):
                      ^
SyntaxError: invalid syntax

This line is invalid because python 3 does not support automatic 
tuple unpacking.

Question 5. I didn't notice any strange behavior/errors. 
This is because python is backwards compatible.
